<resources>
    <string name="app_name">MikkiPastel</string>
    <string name="action_settings">Setting</string>
    <string name="notification">Notification</string>
    <string name="push_notification">Push Notification</string>
    <string name="other">Other</string>
    <string name="about_app">About app</string>
    <string name="versions">V1.0b</string>
    <string name="header_versions">About Version 1.0b</string>
    <string name="content_version">
        - read blog from https://mikkipastel.blogspot.com by this application
        (call data with blogger API 3, Retrofit and Gilde to show by RecyclerView)\n
        - read blog content by chrome custom tab\n
        - update or refresh new content by pull to refresh\n
        - share content to social network
    </string>
    <string name="btn_ok">OK</string>
    <string name="about_me">About Me</string>
    <string name="msg_offline">Internet unavailable.</string>
    <string name="action_try_again">Try Again</string>

    <string name="banner_ad_unit_id">ca-app-pub-0901553226036625/9176642912</string>

    <string name="template_web_blog_url">https://mikkipastel.web.app/%1$s</string>
    <string name="title_share_blog">แชร์บทความให้เพื่อนๆของคุณกันเถอะ</string>

    <string name="header_tag_text">tag</string>
    <string name="default_tag_text">All</string>
</resources>
