<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginTop="@dimen/card_dimen"
        android:layout_marginBottom="@dimen/card_dimen"
        android:text="@string/notification"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/push_notification"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/switch1" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginTop="@dimen/card_dimen"
        android:layout_marginBottom="@dimen/card_dimen"
        android:text="@string/other"/>
    <LinearLayout
        android:id="@+id/popup_aboutme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/about_app"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/versions"/>
    </LinearLayout>

</LinearLayout>